<resources>
    <string name="app_name">ProgettoLSO</string>
    <string name="Login">Login</string>
    <string name="Registrati">Registrati</string>
    <string name="Logo">Logo</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="nome">nome</string>
    <string name="carlo">Carlo</string>
    <string name="cognome">cognome</string>
    <string name="rossi">Rossi</string>
    <string name="et">età</string>
    <string name="Avanti">Avanti</string>
    <string name="cocktail">I NOSTRI COCKTAIL</string>
    <string name="frullati">I NOSTRI FRULLATI</string>
    <string name="cosigliati">CONSIGLIATI</string>
    <string name="eta">età</string>
</resources>