<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.MainActivity"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="135dp"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/butt_log"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/lightlightblack"
        android:text="@string/Login"
        android:textSize="20dp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/butt_reg"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/lightlightblack"
        android:text="@string/Registrati"
        android:textSize="20dp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>