<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ritorno"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textColor="#5F5C63"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

        <TextView
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

    <View
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TextView
        android:layout_marginTop="35dp"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cognome"
        android:textColor="#5F5C63"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

        <TextView
            android:id="@+id/cognome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
    <View
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
        <TextView
            android:layout_marginTop="35dp"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eta"
            android:textColor="#5F5C63"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <TextView
            android:id="@+id/eta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
    <View
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

        <TextView
            android:layout_marginTop="35dp"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textColor="#5F5C63"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
    <View
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

</LinearLayout>
