<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/Avanti"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ritorno"
            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo2" />

        <View
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <LinearLayout
            android:id="@+id/cocktail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"

            android:background="@drawable/foto1"
            android:orientation="vertical"
            >


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:text="@string/cocktail"
                android:fontFamily="serif"
                android:layout_margin="10dp"
                />

            <Button
                android:id="@+id/button_drink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="70dp"
                android:text="Scopri di più"
                android:textSize="20dp"
                android:fontFamily="serif"
                android:textColor="@color/black" />


        </LinearLayout>

        <View
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <LinearLayout
            android:id="@+id/frullati"
            android:layout_width="match_parent"

            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="300dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"

            android:background="@drawable/foto2f"
            android:orientation="vertical"
            >


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:text="@string/frullati"
                android:fontFamily="serif"
                android:layout_margin="10dp"
                />

            <Button
                android:id="@+id/button_frullati"
                android:layout_margin="70dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Scopri di più"
                android:textSize="20dp"
                android:fontFamily="serif"
                android:textColor="@color/black" />


        </LinearLayout>

        <View
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <LinearLayout
            android:id="@+id/Consigliati"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"

            android:background="@drawable/foto3f"
            android:orientation="vertical"
            >


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:text="@string/cosigliati"
                android:fontFamily="serif"
                android:layout_margin="10dp"
                />

            <Button
                android:id="@+id/button_consigliati"
                android:layout_margin="70dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Scopri di più"
                android:textSize="20dp"
                android:fontFamily="serif"
                android:textColor="@color/black"/>


        </LinearLayout>

    </LinearLayout>
</ScrollView>